feat(tag_tree): response synonyms_ja and synonyms_ja
